Tweak Postgres database config

--- a/config/database.yml
+++ b/config/database.yml
@@ -20,5 +20,9 @@ test:
 
 production:
   adapter: postgresql
-  database: mobiemploy_production
-  host: 127.0.0.1
+  encoding: unicode
+  database: tvmethodist_production
+  pool: 5
+  timeout: 5000
+  username: deploy
+  password:
