Add asset pipeline config to nginx

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -7,6 +7,12 @@ server {
   server_name worship.tvmethodist.co.za;
   root /usr/local/tvmethodist/current/public;
 
+  location ~ "^/assets/(.*/)*.*-[0-9a-f]{32}.*" {
+    gzip_static on;
+		expires     max;
+		add_header  Cache-Control public;
+  }
+
   try_files $uri @unicorn;
   location @unicorn {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
