--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,10 +1,10 @@
 upstream unicorn {
-  server unix:/tmp/unicorn.tvmethodist.sock fail_timeout=0;
+  server unix:/tmp/unicorn.steepl.sock fail_timeout=0;
 }
 
 server {
   listen 80 default deferred;
-  server_name worship.tvmethodist.co.za;
+  server_name worship.steepl.co.za;
   root /usr/local/steepl/current/public;
 
   location ~ "^/assets/(.*/)*.*-[0-9a-f]{32}.*" {
