Update nginx config

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -4,7 +4,7 @@ upstream unicorn {
 
 server {
   listen 80 default deferred;
-  server_name worship.steepl.co.za;
+  server_name worship.steepl.co.za steepl.co;
   root /usr/local/steepl/current/public;
 
   location ~ "^/assets/(.*/)*.*-[0-9a-f]{32}.*" {
