Add www redirect to nginx

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -3,6 +3,11 @@ upstream unicorn {
 }
 
 server {
+    listen 80;
+    server_name www.steepl.co;
+    rewrite ^(.*)$ $scheme://steepl.co$1;
+}
+server {
   listen 80 default deferred;
   server_name worship.steepl.co.za steepl.co;
   root /usr/local/steepl/current/public;
