Add profiling to app

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -12,7 +12,7 @@ server {
   server_name worship.steepl.co.za steepl.co;
   root /usr/local/steepl/current/public;
 
-  location ~ "^/assets/(.*/)*.*-[0-9a-f]{32}.*" {
+  location ~ "^/assets/*" {
     gzip_static on;
 		expires     max;
 		add_header  Cache-Control public;
