Add server name to nginx config

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -9,7 +9,7 @@ server {
 }
 server {
   listen 80 default deferred;
-  server_name worship.steepl.co.za steepl.co;
+  server_name worship.steepl.co.za steepl.co steepl.robertfall.com;
   root /usr/local/steepl/current/public;
 
   location ~ "^/assets/*" {
